--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,5 @@
 fastapi[standard]>=0.113.0,<0.114.0
 pydantic>=2.7.0,<3.0.0
 uvicorn[standard]>=0.30.0,<0.40.0
+requests>=2.32.0
+types-requests>=2.32.0
